deployment/deployment-gateway-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service #just the name of the service
  #namespace: trocks-api
  labels:
    app: gateway-service
spec: #deployment spec
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service #this should match the label in the pod template below
  template: #pod template
    metadata:
      labels:
        app: gateway-service #this should match the label in the selector above
    spec: #pod spec
      containers:
        - name: gateway-service
          image: gateway-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080 # Exposed port inside the container
