deployment/service-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service #DNS name
  #namespace: trocks-api
spec:
  #type: NodePort #for exposing outside the cluster in minikube - for local development
  type: ClusterIP #default type - internal to the cluster
  selector:
    app: gateway-service #should match the label in the pod template
  ports:
    - protocol: TCP
      port: 80 #ingress talks to this port
      targetPort: 8080
      # nodePort: 30080 - enable this only if type is NodePort
