deployment/service.yml
# service definitions for gateway-service, person-service, and address-service
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service #DNS name
  #discovery-enabled: "true" #metadata label to be used by spring cloud kubernetes discovery client
  #namespace: trocks-api
spec:
  #type: NodePort #for exposing outside the cluster in minikube - for local development
  type: ClusterIP #default type - internal to the cluster
  selector:
    app: gateway-service #should match the label in the pod template
  ports:
    - protocol: TCP
      port: 80 #ingress talks to this port
      targetPort: 8080
      # nodePort: 30080 - enable this only if type is NodePort
  
---
apiVersion: v1
kind: Service
metadata:
  name: person-service #DNS name
  labels:
    discovery-enabled: "true" #metadata label to be used by spring cloud kubernetes discovery client
  #namespace: trocks-api
spec:
  #type: NodePort #for exposing outside the cluster in minikube - for local development
  type: ClusterIP #default type - internal to the cluster
  selector:
    app: person-service #should match the label in the pod template
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      # nodePort: 30080 - enable this only if type is NodePort
  
---
apiVersion: v1
kind: Service
metadata:
  name: address-service #DNS name
  labels:
    discovery-enabled: "true" #metadata label to be used by spring cloud kubernetes discovery client
  #namespace: trocks-api
spec:
  #type: NodePort #for exposing outside the cluster in minikube - for local development
  type: ClusterIP #default type - internal to the cluster
  selector:
    app: address-service #should match the label in the pod template
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      # nodePort: 30080 - enable this only if type is NodePort
