deployment/ingress-gateway-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  #namespace: trocks-api
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx #for NGINX Ingress Controller (minikube)
  #ingressClassName: alb #for AWS ALB Ingress Controller
  rules:
    # - host: api.localhost
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80 #service port defined in service-gateway-service.yml
